--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                     <h3  class="qualification__title">siswa SMP</h3>
-                    <span class="qualification__subtitle">SMP Negeri Tanjungpinang</span>
+                    <span class="qualification__subtitle">SMP Negeri 7 Tanjungpinang</span>
                     <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
                         2017-2021
