--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>silfia</title>
+  <title>PORTFOLIO</title>
 
   <!-- SWIPER CSS -->
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+
+  <!-- Icon -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  
+  <!-- ICON -->
+  <link rel="icon" href="/img/94501515.jpeg" type="image/x-icon">
 
 </head>
 
@@ -18,7 +24,7 @@
   <!-- HEADER -->
   <header class="header" id="header">
   <nav class="nav container">
-    <a href="#" class="nav-logo">silfia</a>
+    <a href="#" class="nav-logo">Silfia</a>
 
     <div class="nav-menu" id="nav-menu">
     <ul class="nav-list grid">
@@ -49,7 +55,7 @@
       </li>
       <li class="nav-item">
       <a href="#contact" class="nav-link">
-        <i class="fas fa-envelope nav-link-icon"></i> Contactme
+        <i class="fas fa-envelope nav-link-icon"></i> Contact Me
       </a>
       </li>
     </ul>
@@ -74,10 +80,10 @@
     <div class="home-container container grid">
     <div class="home-content grid">
       <div class="home-social">
-      <a href="https://id.linkedin.com/in/" target="_blank" class="home-social-icon">
-        <i class="fab fa-linkedin-in"></i>
+      <a href="https://instagram.com/fia_nanda19?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="home-social-icon">
+        <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://github.com/" target="_blank" class="home-social-icon">
+      <a href="https://github.com/Silfia-ananda" target="_blank" class="home-social-icon">
         <i class="fab fa-github"></i>
       </a>
       </div>
@@ -95,23 +101,24 @@
         165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
         129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-        <image class="home-blob-img" x='12' y='18' xlink:href="img/perfil.png" />
+        <image class="home-blob-img" x='17' y='20' xlink:href="assets/img/woman.png" />
         </g>
       </svg>
       </div>
       <div class="home-data">
-      <h1 class="home-data-title">Hai,</h1>
+      <h1 class="home-data-title">Hai Nama,</h1>
       <h1 class="home-data-title">Saya Silfia</h1>
-      <h3 class="home-data-subtitle">Software Development Teacher</h3>
-      <p class="home-data-description">Pendidik dibidang Pemrograman Web Frontend dan Backend.</p>
-      <a href="#contact" class="button button-flex">
+      <h3 class="home-data-subtitle">siswi SMkn 4 Tanjungpinang</h3>
+      <p class="home-data-description">Manusia yang ingin mencari jati diri. dan cita cita yang baik</p>
+      <a href="https://wa.me/622274154157" class="button button-flex">
         Contact Me <i class="fab fa-telegram-plane button-icon"></i>
       </a>
       </div>
     </div>
-    <div class="home-scroll">
-      <a href="#about" class="home-scroll-button button-flex">
-      <span class="home-scroll-button-name">Scroll down</span>
+    <div class="home-__scroll">
+      <a href="#about" class="home-__scroll-button button--flex">
+        <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+      <span class="home__scroll-name">Scroll down</span>
       <i class="fas fa-arrow-down home-scroll-button-arrow"></i>
       </a>
     </div>
@@ -120,29 +127,29 @@
 
   <!-- ABOUT -->
   <section class="about section" id="about">
-    <h2 class="section-title">Tentang Saya</h2>
+    <h2 class="section-title">about me</h2>
     <span class="section-subtitle">My introduction</span>
 
     <div class="about-container container grid">
     <div class="about-container-img">
-      <img src="img/perfil.png" alt="About" class="about-container-imgAlt">
+      <img src="assets/img/violet.jpg" alt="About" class="about-container-imgAlt">
     </div>
 
     <div class="about-container-data">
-      <p class="about-container-data-description">Guru kejuruan di program studi Rekayasa Perangkat Lunak dengan bidang ahli pemrograman web.</p>
+      <p class="about-container-data-description">Siswa SMKN 4 Tanjungpinang Rekayasa Perangkat Lunak dengan bidang ahli pemrograman web.</p>
 
       <div class="about-container-data-info">
       <div>
-        <span class="about-container-data-info-title">02+</span>
-        <span class="about-container-data-name">Tahun <br> Pengalaman</span>
+        <span class="about-container-data-info-title">11</span>
+        <span class="about-container-data-name">Tahun <br> Belajar</span>
       </div>
       <div>
-        <span class="about-container-data-info-title">06+</span>
-        <span class="about-container-data-name">Pproyek <br> terlaksana</span>
+        <span class="about-container-data-info-title">0</span>
+        <span class="about-container-data-name">Belum <br> Ada Proyek</span>
       </div>
       </div>
       <div class="about-buttons">
-      <a download="" href="pdf/Alexa-Cv.pdf" class="button button-flex">
+      <a download="" href="" class="button button-flex">
         Download CV <i class="fas fa-download button-icon"></i>
       </a>
       </div>
@@ -194,7 +201,7 @@
         <div class="skills-data">
         <div class="skills-titles">
           <h3 class="skills-name">JavaScript</h3>
-          <span class="skills-number">60%</span>
+          <span class="skills-number">20%</span>
         </div>
         <div class="skills-bar">
           <span class="skills-percentage skills-js"></span>
@@ -252,7 +259,7 @@
 
   <!-- QUALIFICATION -->
   <section class="qualification section">
-    <h2 class="section-title">Kualifikasi</h2>
+    <h2 class="section-title">Qualification</h2>
     <span class="section-subtitle">My personal journey</span>
 
     <div class="qualification-container container">
@@ -272,11 +279,11 @@
       <!-- QUALIFICATION 1 -->
       <div class="qualification-data">
         <div class="qualification-data-alt">
-        <h3 class="qualification-title">Sekolah Menangeah Atas</h3>
-        <span class="qualification-subtitle">SMK Negeri 4 Tanjungpinang</span>
+        <h3 class="qualification-title">Sekolah Menengah Pertama</h3>
+        <span class="qualification-subtitle">SMPN 7 Tamjungpinang</span>
         <div class="qualification-calendar">
           <i class="fas fa-calendar-alt"></i>
-          2023 - ??
+          2020 - 2023
         </div>
         </div>
         <div>
@@ -293,11 +300,11 @@
         </div>
 
         <div class="qualification-data-alt">
-        <h3 class="qualification-title">??</h3>
-        <span class="qualification-subtitle">??</span>
+        <h3 class="qualification-title">Sekolah Menengah kejuruan</h3>
+        <span class="qualification-subtitle">SMK Negeri 4 Tanjungpinang</span>
         <div class="qualification-calendar">
           <i class="fas fa-calendar-alt"></i>
-          ??
+          2023 - 2025
         </div>
         </div>
       </div>
@@ -310,11 +317,11 @@
       <!-- QUALIFICATION 1 -->
       <div class="qualification-data">
         <div class="qualification-data-alt">
-        <h3 class="qualification-title">??</h3>
-        <span class="qualification-subtitle">??</span>
+        <h3 class="qualification-title">Menganggur</h3>
+        <span class="qualification-subtitle">lerolerolero</span>
         <div class="qualification-calendar">
           <i class="fas fa-calendar-alt"></i>
-          ??
+          dari lahir
         </div>
         </div>
         <div>
@@ -332,22 +339,22 @@
         </div>
 
         <div class="qualification-data-alt">
-        <h3 class="qualification-title">??</h3>
-        <span class="qualification-subtitle">??</span>
+        <h3 class="qualification-title">Masih Menganggur</h3>
+        <span class="qualification-subtitle">ZZzzzzz</span>
         <div class="qualification-calendar">
           <i class="fas fa-calendar-alt"></i>
-          ??
+          Remaja
         </div>
         </div>
       </div>
       <!-- QUALIFICATION 3 -->
       <div class="qualification-data">
         <div class="qualification-data-alt">
-        <h3 class="qualification-title">??</h3>
-        <span class="qualification-subtitle">??</span>
+        <h3 class="qualification-title">Masih Menganggur Lagi</h3>
+        <span class="qualification-subtitle">zzzzzzzzzzzzzzz</span>
         <div class="qualification-calendar">
           <i class="fas fa-calendar-alt"></i>
-          ??
+          Sekarang
         </div>
         </div>
         <div>
@@ -451,7 +458,7 @@
     <div class="swiper-wrapper">
       <!-- PORTFOLIO 1 -->
       <div class="portfolio-content grid swiper-slide">
-      <img src="img/portfolio1.jpg" alt="Portfolio" class="portfolio-img">
+      <img src="assets/img/portfolio1.jpg" alt="Portfolio" class="portfolio-img">
       <div class="portfolio-data">
         <h3 class="portfolio-title">Sistem Informasi</h3>
         <p class="portfolio-description">Website yang dikembangkan untuk memudahkan pekerjaan input data client.</p>
@@ -462,7 +469,7 @@
       </div>
       <!-- PORTFOLIO 2 -->
       <div class="portfolio-content grid swiper-slide">
-      <img src="img/portfolio2.jpg" alt="Portfolio" class="portfolio-img">
+      <img src="assets/img/portfolio2.jpg" alt="Portfolio" class="portfolio-img">
       <div class="portfolio-data">
         <h3 class="portfolio-title">Landing Page</h3>
         <p class="portfolio-description">website yang dikembangkan untuk promosi.</p>
@@ -474,10 +481,10 @@
     </div>
     <!-- Add Arrow -->
     <div class="swiper-button-next">
-      <i class="fas fa-angle-right swiper-portfolio-icon"></i>
+      <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
     </div>
     <div class="swiper-button-prev">
-      <i class="fas fa-angle-left swiper-portfolio-icon"></i>
+      <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
     </div>
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
@@ -489,14 +496,14 @@
     <div class="project-bg">
     <div class="project-container container grid">
       <div class="project-data">
-      <h2 class="project-bg-title">Anda Memiliki Ide Project</h2>
+      <h2 class="project-bg-title">Kamu Punya Ide Project?</h2>
       <p class="project-bg-description">Hubungi saya sekarang.</p>
       <a href="#contact" class="button button-flex button-white">
         Contact Me
         <i class="fab fa-telegram-plane project-icon button-icon"></i>
       </a>
       </div>
-      <img src="img/perfil.png" alt="Project img" class="project-bg-img">
+      <img src="assets/img/woman.png" alt="Project img" class="project-bg-img">
     </div>
     </div>
   </section>
@@ -504,54 +511,68 @@
 
   <!-- CONTACT ME -->
   <section class="contact section" id="contact">
-    <h2 class="section-title">Hubungi saya</h2>
+    <div class="section-title">Contact Me</div>
     <span class="section-subtitle">Get in touch</span>
-
     <div class="contact-container container grid">
-    <div class="contact-items">
-      <div class="contact-information">
-      <i class="fas fa-phone contact-icon"></i>
-
       <div>
-        <h3 class="contact-title">Call/Whatsapp</h3>
-        <span class="contact-subtitle">??</span>
-      </div>
-      </div>
-      <div class="contact-information">
-      <i class="far fa-envelope contact-icon"></i>
-
-      <div>
-        <h3 class="contact-title">Email</h3>
-        <span class="contact-subtitle">??</span>
-      </div>
+        <div class="contact-information">
+          <i class="uil uil-phone contact-icon"></i>
+          <div>
+          <h3 class="contact-title">Call Me</h3>
+          <span class="contact-subtitle"></span>
+        </div>
       </div>
       <div class="contact-information">
-      <i class="fas fa-map-marker-alt contact-icon"></i>
-
+        <i class="uil uil-envelope contact-icon"></i>
+        <div>
+          <h3 class="contact-title">Email</h3>
+          <span class="contact-subtitle">silfiaananda.smkn4tnj@gmail.com</span>
+        </div>
+      </div>
+      <div class="contact-information">
+        <i class="uil uil-map-marker contact-icon"></i>
+        <div>
+          <h3 class="contact-title">Location</h3>
+          <span class="contact-subtitle">kp.sidomulyo jln al-kausar 2</span>
+        </div>
+      </div>
+    </div>
+    <form action="" class=".contact-form grid">
+      <div class="contact-inputs grid">
+        <div class="contact-content">
+          <label for="" class="contact-label">Name</label>
+          <input type="text" class="contact-input">
+        </div>
+        <div class="contact-content">
+          <label for="" class="contact-label">Email</label>
+          <input type="email" class="contact-input">
+        </div>
+      </div>
+      <div class="contact-content">
+        <label for="" class="contact-label">Project</label>
+        <input type="text" class="contact-input">
+      </div>
+      <div class="contact-content">
+        <label for="" class="contact-label">Message</label>
+        <textarea name="" id="" cols="0" rows="7" class="contact-input"></textarea>
+        <input type="text" class="contact-input">
+      </div>
       <div>
-        <h3 class="contact-title">Lokasi</h3>
-        <span class="contact-subtitle">??</span>
+        <a href="#" class="button button-flex">
+          Send Message
+          <i class="uil uil-message button-icon"></i>
+        </a>
       </div>
-      </div>
-    </div>
-
-    
-    <div class="contact-button">
-      <a href="https://api.whatsapp.com/send?phone=" target="_blank" class="button button-flex">
-      Send Message <i class="fab fa-telegram-plane button-icon"></i>
-      </a>
-    </div>
-    </div>
+    </form>
   </section>
-  </main>
-
+</main>
   <!-- FOOTER -->
   <footer class="footer">
   <div class="footer-bg">
     <div class="footer-container container grid">
     <div class="footer-texts">
       <h1 class="footer-title">Silfia</h1>
-      <span class="footer-subtitle">Software Development Teacher</span>
+      <span class="footer-subtitle">Siswi SMKN 4</span>
     </div>
 
     <ul class="footer-links">
@@ -566,18 +587,12 @@
       </li>
     </ul>
     <div class="footer-socials">
-      <a href="https://www.facebook.com/" target="_blank">
-      <i class="fab fa-facebook-f footer-social"></i>
-      </a>
-      <a href="https://twitter.com/" target="_blank">
-      <i class="fab fa-twitter footer-social"></i>
-      </a>
-      <a href="https://www.instagram.com/" target="_blank">
+      <a href="https://instagram.com/fia_nanda19?igshid=OGQ5ZDc2ODk2ZA==" target="_blank">
       <i class="fab fa-instagram footer-social"></i>
       </a>
     </div>
     </div>
-    <p class="footer-copy">&#169; silfia. All right reserved</p>
+    <p class="footer-copy">&#169; Silfia. All right reserved</p>
   </div>
   </footer>
 
@@ -590,10 +605,9 @@
   <script src="https://kit.fontawesome.com/027d3564f6.js" crossorigin="anonymous"></script>
 
   <!-- SWIPER JS -->
-  <script src="js/swiper-bundle.js"></script>
+  <script src="assets/js/swiper-bundle.js"></script>
 
   <!-- MAIN JS -->
-  <script src="js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
-
 </html>
